manifests/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: loan
spec:
  type: ClusterIP
  selector:
    app: loan
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
